--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "sdlrs_template"
+name = "renderer_rs"
 version = "0.1.0"
 authors = ["deppong <30512867+deppong@users.noreply.github.com>"]
-edition = "2018"
+edition = "2022"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
